# Library-Management-System

./: .gitignore  CMakeLists.txt  README.md
css/: animations.css  components.css
frontend/: README.md  index.html
frontend/css/: base.css  layouts.css  variables.css
frontend/js/: api.js  mockData.js  utils.js
include/: Book.h  Exceptions.h  Faculty.h  Journal.h  Librarian.h  Library.h  LibraryItem.h  Magazine.h  Person.h  Student.h  Transaction.h
js/: config.js  router.js  state.js
src/: Book.cpp  Faculty.cpp  Journal.cpp  Librarian.cpp  Library.cpp  LibraryItem.cpp  Magazine.cpp  Person.cpp  Student.cpp  Transaction.cpp  main.cpp
